# bgo

./: .black  .flake8  .gitignore  .pre-commit-config.yaml  README.md  api.py  config.py  controllers.py  interface.py  main.py  palette.py  pyproject.toml  pyrightconfig.json  requirements.txt  utils.py  view.py  weather
bgo/: api.py  interface.py
bgo/view/: asciiart.py
src/: api.py  asciiart.py  config.py  interface.py  main.py  utils.py  view.py  weather
src/view/: formater.py  palette.py  printer.py
weathercli/: api.py  config.py  interface.py
weathercli/view/: formater.py  printer.py
