[tool.poetry]
name = "weather-cli"
version = "0.1.0"
description = "About"
authors = ["Sexy terminal util to view the weather"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
