[tool.poetry]
name = "weather-cli"
version = "0.1.0"
description = "About"
authors = ["Sexy terminal util to view the weather"]
readme = "README.md"
packages = [{include = "weathercli"}]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240218"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
pyright = "^1.1.351"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
    venv/
    __pycache__/
    .git
    media
    .idea
'''
